--- a/Ex06.ipynb
+++ b/Ex06.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -35,6 +19,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "32v7IU9Pom1o"
+      },
       "source": [
         "Essential info about tagged entities:\n",
         "```\n",
@@ -47,116 +34,118 @@
         "eve = Event\n",
         "nat = Natural Phenomenon\n",
         "```"
-      ],
-      "metadata": {
-        "id": "32v7IU9Pom1o"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = pd.read_csv(\"ner_dataset.csv\", encoding=\"latin1\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SBffZlAgocDh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = pd.read_csv(\"ner_dataset.csv\", encoding=\"latin1\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data.head(50)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "tqqCE7zqolER"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data.head(50)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = data.fillna(method=\"ffill\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "HoHAg7KZo69w"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = data.fillna(method=\"ffill\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data.head(50)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0DMO1sJ9o9zA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data.head(50)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Unique words in corpus:\", data['Word'].nunique())\n",
-        "print(\"Unique tags in corpus:\", data['Tag'].nunique())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ArBV7Hu7pHUI"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(\"Unique words in corpus:\", data['Word'].nunique())\n",
+        "print(\"Unique tags in corpus:\", data['Tag'].nunique())"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vsdckyINwrCW"
+      },
+      "outputs": [],
       "source": [
         "words=list(data['Word'].unique())\n",
         "words.append(\"ENDPAD\")\n",
         "tags=list(data['Tag'].unique())"
-      ],
-      "metadata": {
-        "id": "vsdckyINwrCW"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Unique tags are:\", tags)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-IMsJobwpLpY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(\"Unique tags are:\", tags)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "num_words = len(words)\n",
-        "num_tags = len(tags)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qg_ixvHZ0kkc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "num_words = len(words)\n",
+        "num_tags = len(tags)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "num_words"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Dex8DMLv1F2V"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "num_words"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Pz2RCZB6xFdd"
+      },
+      "outputs": [],
       "source": [
         "class SentenceGetter(object):\n",
         "    def __init__(self, data):\n",
@@ -176,282 +165,250 @@
         "            return s\n",
         "        except:\n",
         "            return None"
-      ],
-      "metadata": {
-        "id": "Pz2RCZB6xFdd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "getter = SentenceGetter(data)\n",
-        "sentences = getter.sentences"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_H7HPRmRxILt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "getter = SentenceGetter(data)\n",
+        "sentences = getter.sentences"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(sentences)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dg3I0kQgFmCQ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "len(sentences)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "sentences[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Q0LpMQoJxLdP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "sentences[0]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "word2idx = {w: i + 1 for i, w in enumerate(words)}\n",
-        "tag2idx = {t: i for i, t in enumerate(tags)}"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Dd1m9pn4xeke"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "word2idx = {w: i + 1 for i, w in enumerate(words)}\n",
+        "tag2idx = {t: i for i, t in enumerate(tags)}"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "word2idx"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3NjwbR3JxjsO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "word2idx"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "plt.hist([len(s) for s in sentences], bins=50)\n",
-        "plt.show()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "t2qVRvVuxsH-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "plt.hist([len(s) for s in sentences], bins=50)\n",
+        "plt.show()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X1 = [[word2idx[w[0]] for w in s] for s in sentences]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OxiZjIPvyrbu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X1 = [[word2idx[w[0]] for w in s] for s in sentences]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "type(X1[0])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "HIrDysBvytG-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "type(X1[0])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X1[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nvW4Yg2fy2I2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X1[0]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "max_len = 50"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dXiZQT9oyn7e"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
+      "outputs": [],
       "source": [
-        "# **pad_sequences example**"
-      ],
-      "metadata": {
-        "id": "eeYbmbt_zfIp"
-      }
+        "max_len = 50"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "nums = [[1], [2, 3], [4, 5, 6]]\n",
-        "sequence.pad_sequences(nums)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "T52hHPfbznyl"
+        "id": "xOn14Tb50NgO"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "nums = [[1], [2, 3], [4, 5, 6]]\n",
-        "sequence.pad_sequences(nums,maxlen=2)"
-      ],
-      "metadata": {
-        "id": "ZM9JwHM92FTs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "X = sequence.pad_sequences(maxlen=max_len,\n",
         "                  sequences=X1, padding=\"post\",\n",
         "                  value=num_words-1)"
-      ],
-      "metadata": {
-        "id": "xOn14Tb50NgO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "TG-20fXZ0pU0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X[0]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y1 = [[tag2idx[w[2]] for w in s] for s in sentences]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "xPvWZB-61ghV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "y1 = [[tag2idx[w[2]] for w in s] for s in sentences]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wST3Nrkp1k3s"
+      },
+      "outputs": [],
       "source": [
         "y = sequence.pad_sequences(maxlen=max_len,\n",
         "                  sequences=y1,\n",
         "                  padding=\"post\",\n",
         "                  value=tag2idx[\"O\"])"
-      ],
-      "metadata": {
-        "id": "wST3Nrkp1k3s"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
-        "                                                    test_size=0.2, random_state=1)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "t23QC8Yj2eTV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+        "                                                    test_size=0.2, random_state=1)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uaWPtQJ04V7T"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train[0]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y_train[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dPDp3MNr4ZRs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "y_train[0]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DgIT1Dox5Uo1"
+      },
+      "outputs": [],
       "source": [
         "input_word = layers.Input(shape=(max_len,))\n",
         "# Write your code here               \n",
         "model = Model(input_word, output)  "
-      ],
-      "metadata": {
-        "id": "DgIT1Dox5Uo1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.summary()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "EFYOj10v6-YU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('Name:                 Register Number:       ')\n",
+        "model.summary()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wADTzVii7jxb"
+      },
+      "outputs": [],
       "source": [
         "# Write your code here\n",
         "model.compile(optimizer=\"\",\n",
         "              loss=\"\",\n",
         "              metrics=[\"\"])"
-      ],
-      "metadata": {
-        "id": "wADTzVii7jxb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TAgUMZ_X7oSM"
+      },
+      "outputs": [],
       "source": [
         "history = model.fit(\n",
         "    x=X_train,\n",
@@ -460,64 +417,78 @@
         "    batch_size=32, \n",
         "    epochs=3,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "TAgUMZ_X7oSM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "metrics = pd.DataFrame(model.history.history)\n",
-        "metrics.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jtVPlygc85Sa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "metrics = pd.DataFrame(model.history.history)\n",
+        "metrics.head()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "metrics[['accuracy','val_accuracy']].plot()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "bHu3hPWQ9B_C"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('Name:                 Register Number:       ')\n",
+        "metrics[['accuracy','val_accuracy']].plot()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "metrics[['loss','val_loss']].plot()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dwJ0H2tt9E4q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('Name:                 Register Number:       ')\n",
+        "metrics[['loss','val_loss']].plot()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oXmdlsAI9UKj"
+      },
+      "outputs": [],
       "source": [
         "i = 20\n",
         "p = model.predict(np.array([X_test[i]]))\n",
         "p = np.argmax(p, axis=-1)\n",
         "y_true = y_test[i]\n",
+        "print('Name:                 Register Number:       ')\n",
         "print(\"{:15}{:5}\\t {}\\n\".format(\"Word\", \"True\", \"Pred\"))\n",
         "print(\"-\" *30)\n",
         "for w, true, pred in zip(X_test[i], y_true, p[0]):\n",
         "    print(\"{:15}{}\\t{}\".format(words[w-1], tags[true], tags[pred]))"
-      ],
-      "metadata": {
-        "id": "oXmdlsAI9UKj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
